2022-03-08  Chris Dumez  <cdumez@apple.com>

        Unreviewed, silence console logging for http/tests/security/cookie-module-import-propagate.html
        <rdar://88842347>

        This is to address flakiness on the bots.

        * TestExpectations:
        * http/tests/security/cookie-module-import-propagate-expected.txt:

2022-03-08  J Pascoe  <j_pascoe@apple.com>

        [ iOS ] 2X http/wpt/webauthn/public-key-credential-create-failure-local (layout-tests) are constant text failures
        https://bugs.webkit.org/show_bug.cgi?id=237548
        rdar://problem/89923849

        Unreviewed test gardening.

        These console messages differing is causing test failures, fixing expectations.

        * http/wpt/webauthn/public-key-credential-create-failure-local-silent.https-expected.txt:
        * http/wpt/webauthn/public-key-credential-create-failure-local.https-expected.txt:

2022-03-08  Youenn Fablet  <youenn@apple.com>

        Add a preference to mute video capture in case audio capture gets interrupted
        https://bugs.webkit.org/show_bug.cgi?id=237524
        <rdar://78421282>

        Reviewed by Eric Carlson.

        * fast/mediastream/media-stream-video-track-interrupted-from-audio-expected.txt: Added.
        * fast/mediastream/media-stream-video-track-interrupted-from-audio.html: Added.
        * fast/mediastream/media-stream-video-track-interrupted.html: Migrated to testRunner API.
        * fast/mediastream/track-ended-while-muted.html:
        * platform/glib/TestExpectations:

2022-03-08  Youenn Fablet  <youenn@apple.com>

        Improve WebRTC VPX media capabilities accuracy
        https://bugs.webkit.org/show_bug.cgi?id=237462

        Reviewed by Eric Carlson.

        * webrtc/video-mute-vp8.html:
        * webrtc/vp9-expected.txt:
        * webrtc/vp9.html:

2022-03-08  Chris Dumez  <cdumez@apple.com>

        Resync web-platform-tests/beacon from upstream
        https://bugs.webkit.org/show_bug.cgi?id=237536
