@@ -797,7 +797,7 @@
 #endif
 #endif
 
-#if ((PLATFORM(IOS) || PLATFORM(MACCATALYST)) && __IPHONE_OS_VERSION_MAX_ALLOWED >= 140300) || (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED > 120000)
+#if ((PLATFORM(IOS) || PLATFORM(MACCATALYST)) && __IPHONE_OS_VERSION_MAX_ALLOWED >= 140300) || (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 130000)
 #if !defined(HAVE_AVSPEECHSYNTHESIS_SYSTEMVOICE)
 #define HAVE_AVSPEECHSYNTHESIS_SYSTEMVOICE 1
 #endif
