@@ -1,3 +1,15 @@
+2022-03-08  Chris Fleizach  <cfleizach@apple.com>
+
+        AX: Speech Synthesis no longer returning list of voices in macOS 12.3
+        https://bugs.webkit.org/show_bug.cgi?id=237584
+        <rdar://problem/89952347>
+
+        Reviewed by Andres Gonzalez.
+
+        The minimum macOS version was meant to be 13 and above, but we started including 12.x releases inadvertently.
+
+        * wtf/PlatformHave.h:
+
 2022-03-08  Youenn Fablet  <youenn@apple.com>
 
         Add a preference to mute video capture in case audio capture gets interrupted
